a bunch of stuff

--- a/src/app/git-commit-graph/git-commit-graph.component.html
+++ b/src/app/git-commit-graph/git-commit-graph.component.html
@@ -1,2 +1,3 @@
 <h2 class='git-commit-title'>Git Commit Contributions - {{title}}</h2>
+<div #legend class='git-commit-legend'></div>
 <p-chart #chart type="line" [data]="data" [options]="options"></p-chart>
