--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-git-commit-graph></app-git-commit-graph>
 <app-code-commit-trends-graph></app-code-commit-trends-graph>
+<app-code-coverage-graph></app-code-coverage-graph>
