--- a/src/app/multi-line-chart/multi-line-chart.component.css
+++ b/src/app/multi-line-chart/multi-line-chart.component.css
@@ -1,7 +1,8 @@
 .multi-line-chart-title {
-  font-family: "Helvetica Neue";
-  font-size: 1.25em;
+  font-family: "Helvetica Neue", Roboto, sans-serif;
+  font-weight: bold;
+  font-size: 1em;
   text-align: center;
   color: #666;
-  margin: 5px auto;
+  margin: 0 auto;
 }
