--- a/src/app/code-coverage-graph/code-coverage-graph.component.css
+++ b/src/app/code-coverage-graph/code-coverage-graph.component.css
@@ -1,27 +1,26 @@
 .legend {
   font-size: 12px;
-  font-family: Helvetica;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-.labels text {
-  font-family: Helvetica;
+text {
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 10px;
   text-anchor: middle;
   fill: black;
 }
 
-path {
-  cursor: pointer;
-}
-
 .d3-tip {
   line-height: 1;
-  font-weight: bold;
-  padding: 12px;
-  background: rgba(0, 0, 0, 0.8);
+  /* font-weight: bold; */
+  padding: 5px;
+  background: rgba(0, 0, 0, 0.75);
   color: #fff;
   border-radius: 2px;
   pointer-events: none;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 0.75em;
+  text-anchor: middle;
 }
 
 /* Creates a small triangle extender for the tooltip */
@@ -31,7 +30,7 @@ path {
   font-size: 10px;
   width: 100%;
   line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(0, 0, 0, 0.75);
   position: absolute;
   pointer-events: none;
 }
