--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-git-commit-graph></app-git-commit-graph>
 <app-code-commit-trends-graph></app-code-commit-trends-graph>
 <app-code-coverage-graph></app-code-coverage-graph>
+<app-advanced-pie-chart></app-advanced-pie-chart>
+<app-code-complexity-graph></app-code-complexity-graph>
