add code complexity graph

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,7 @@
 <app-code-commit-trends-graph></app-code-commit-trends-graph>
 <app-code-coverage-graph></app-code-coverage-graph>
 <app-advanced-pie-chart></app-advanced-pie-chart>
-<app-code-complexity-graph></app-code-complexity-graph>
+<div>
+  <app-code-complexity-graph></app-code-complexity-graph>
+</div>
+
